Add new SalesOrders endpoint #0000139386
+ Added a new /salesorders GET endpoint for fetching customer sales
order and/or quote information from WinMan.
